--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<!-- Bio and contact -->
 	<section id="contact" class="wrapper style2 special">
 		<header class="major">
-			<h2>Contact Information</h2>
+			<h2>Contact</h2>
 		</header>
 		<ul class="icons labeled">
 			<li><a href="mailto:kendell.crocker@protonmail.com" class="icon label fa-envelope"><span
@@ -131,14 +131,14 @@
 					</p>
 					<p class="tech"><i class="fa fa-code"></i> Headscale · Tailscale · Authentik · Docker · Linux</p>
 
-					<p class="links">
+					<!--<p class="links">
 						<a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Infra
 							Notes</a>
-					</p>
+					</p>-->
 				</div>
 				<div class="col-4 col-12-small">
 					<span class="image fit" style="max-width:280px; margin-left:auto;">
-						<img src="images/placeholder.png" srcset="images/placeholder.png 2x, images/placeholder.png 1x"
+						<img src="images/headscale_authentik_flow.png" srcset="images/headscale_authentik_flow.png 2x, images/headscale_authentik_flow.png 1x"
 							style="aspect-ratio:1/1" loading="lazy" alt="Headscale and Authentik OIDC control plane">
 					</span>
 				</div>
@@ -502,27 +502,52 @@
 	<!-- Education -->
 	<section id="education" class="wrapper">
 		<div class="inner">
-			<!-- Education -->
 			<header class="major">
-				<h2>Education</h2>
+				<h2><i class="fa fa-graduation-cap" aria-hidden="true" style="margin-right:.4rem;"></i>Education</h2>
 			</header>
-			<header>
-				<ul>
-					<li>
-						<h4>Bachelor of Science - Business Information Systems</h4>
-						<p>Oregon State University, Corvallis, Oregon - June 2024</p>
-					</li>
-				</ul>
-			</header>
-			<header>
-				<ul>
-					<li>
-						<h4>Associate of Science - Computer Science</h4>
-						<p>Lane Community College, Eugene, Oregon - June 2019</p>
-					</li>
-				</ul>
-			</header>
+
+			<div class="row gtr-25" style="max-width:58rem; margin:0 auto;">
+
+				<!-- OSU -->
+				<div class="col-12" style="margin-bottom:2.25rem;">
+					<div class="row gtr-15" style="align-items:center;">
+						<div class="col-3 col-12-small" style="text-align:center;">
+							<img src="images/osu-primarylogo-2-compressor.jpg" alt="Oregon State University logo"
+								style="max-height:72px; max-width:100%; height:auto; display:inline-block; border:0; box-shadow:none;">
+						</div>
+						<div class="col-9 col-12-small edu-text">
+							<h4 style="margin:0;">Bachelor of Science — Business Information Systems</h4>
+							<p style="margin:.25rem 0 0;">Oregon State University, Corvallis, Oregon — June 2024</p>
+						</div>
+					</div>
+				</div>
+
+				<!-- LCC -->
+				<div class="col-12" style="margin-bottom:2.25rem;">
+					<div class="row gtr-15" style="align-items:center;">
+						<div class="col-3 col-12-small" style="text-align:center;">
+							<img src="images/lane-logo-vertical-black.png" alt="Lane Community College logo"
+								style="max-height:84px; max-width:100%; height:auto; display:inline-block; border:0; box-shadow:none;">
+						</div>
+						<div class="col-9 col-12-small edu-text">
+							<h4 style="margin:0;">Associate of Science — Computer Science</h4>
+							<p style="margin:.25rem 0 0;">Lane Community College, Eugene, Oregon — June 2019</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
+
+	<style>
+		/* Center Education text when columns stack on small screens */
+		@media screen and (max-width: 736px) {
+			#education .edu-text {
+				text-align: center;
+			}
+		}
+	</style>
+
 
 	<!-- Hobbies-->
 	<section id="activities" class="wrapper">
