more pictures added

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				</div>
 				<div class="col-4 col-12-small">
 					<span class="image fit" style="max-width:280px; margin-left:auto;">
-						<img src="images/placeholder.png" srcset="images/placeholder.png 2x, images/placeholder.png 1x"
+						<img src="images/k3s_demo.png" srcset="images/k3s_demo.png 2x, images/k3s_demo.png 1x"
 							style="aspect-ratio:1/1" loading="lazy" alt="Headscale and Authentik OIDC control plane">
 					</span>
 				</div>
