--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+	<!-- Sprinkler Icon -->
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.4.47/css/materialdesignicons.min.css">
 </head>
 
 <body class="is-preload">
@@ -217,22 +220,20 @@
 						-->
 					</div>
 
-					<!-- Python Sprinklers -->
+					<!-- Python Sprinklers (with MDI sprinkler icon) -->
 					<div class="col-4 col-12-small">
-						<div class="proj-tile">
-							<!-- SVG or PNG works; SVG preferred if available -->
-							<img class="logo" src="images/placeholder.png" alt="python sprinklers" loading="lazy">
+						<div class="proj-tile" role="img" aria-label="Sprinkler project" style="aspect-ratio:1/1; background:#f5f7fa; border-radius:8px;
+              display:flex; align-items:center; justify-content:center; margin-bottom:.6rem;">
+							<span class="mdi mdi-sprinkler-variant mdi-48px" style="color:#97a0aa;"
+								aria-hidden="true"></span>
 						</div>
+
 						<h5 style="margin:.1rem 0 .2rem;"><strong>Python-Based Sprinkler System</strong></h5>
 						<p class="subtle" style="margin:0 0 .4rem;">Weather-aware zone control</p>
 						<p class="subtle" style="margin:0 0 .4rem;">Custom-built control stations</p>
 						<p class="subtle" style="margin:0 0 .4rem;">Integration with Home Assistant</p>
 						<p class="tech" style="margin:0 0 .4rem;"><i class="fa fa-code"></i> Python · NOAA/NWS API ·
 							Shelly</p>
-						<!--
-						<p class="links" style="margin:0;"><a class="button small icon fa-external-link" href="#"
-								target="_blank" rel="noopener">Notes</a></p>
-						-->
 					</div>
 
 					<!-- Home Assistant -->
