--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<div class="col-4 col-12-small">
 					<span class="image fit" style="max-width:280px; margin-left:auto;">
 						<img src="images/blackbox.jpg" srcset="images/blackbox.jpg 2x, images/blackbox.jpg 1x"
-							style="aspect-ratio:1/1" loading="lazy" alt="Headscale and Authentik OIDC control plane">
+							style="aspect-ratio:1/1" loading="lazy" alt="Raspberry Pi 'Black-Box' VPN endpoint">
 					</span>
 				</div>
 			</div>
@@ -184,7 +184,7 @@
 				<div class="col-4 col-12-small">
 					<span class="image fit" style="max-width:280px; margin-left:auto;">
 						<img src="images/k3s_demo.png" srcset="images/k3s_demo.png 2x, images/k3s_demo.png 1x"
-							style="aspect-ratio:1/1" loading="lazy" alt="Headscale and Authentik OIDC control plane">
+							style="aspect-ratio:1/1" loading="lazy" alt="kubectl output showing deployment, service, and pods on a k3s demo cluster">
 					</span>
 				</div>
 			</div>
@@ -208,8 +208,8 @@
 							<img class="logo" src="images/truenas_scale-logo-full-color-rgb.webp" alt="TrueNAS logo"
 								loading="lazy">
 						</div>
-						<h5 style="margin:.1rem 0 .2rem;"><strong>Truenas SCALE</strong></h5>
-						<p class="subtle" style="margin:0 0 .4rem;">ZFS snapshot & replication</p>
+						<h5 style="margin:.1rem 0 .2rem;"><strong>TrueNAS SCALE</strong></h5>
+						<p class="subtle" style="margin:0 0 .4rem;">ZFS snapshots & replication</p>
 						<p class="subtle" style="margin:0 0 .4rem;">App Hosting</p>
 						<p class="subtle" style="margin:0 0 .4rem;">Storage and data services</p>
 						<p class="tech" style="margin:0 0 .4rem;"><i class="fa fa-code"></i> ZFS · SMB/NFS · App
@@ -347,11 +347,11 @@
 			<!-- Job 5 -->
 			<header>
 				<h4>Marathon Coach, Inc.</h4>
-				<p>Coach Network Designer, June 2023 - Current</p>
+				<p>Coach Network Designer, June 2023 - Present</p>
 			</header>
 			<div class="col-6 col-12-medium">
 				<ul>
-					<li>Design, maintain and oversee installation of coach networking systems</li>
+					<li>Design, maintain, and oversee installation of coach networking systems</li>
 					<li>Provide technical support for production teams, multiple service centers, and customers. </li>
 					<li>Research and develop innovative networking solutions to enhance connectivity between<br>support
 						teams and customers on motor coaches.</li>
@@ -366,9 +366,9 @@
 			</header>
 			<div class="col-6 col-12-medium">
 				<ul>
-					<li>Design, install, and maintain campus wide computer networks</li>
+					<li>Design, install, and maintain campus-wide computer networks</li>
 					<li>Provided technical on-call support to staff and volunteers</li>
-					<li>Designed, built and oversaw a live produciton environment including<br>audio mixing, video
+					<li>Designed, built, and oversaw a live producton environment including<br>audio mixing, video
 						production and live stream components.</li>
 				</ul>
 			</div>
@@ -381,7 +381,7 @@
 			</header>
 			<div class="col-6 col-12-medium">
 				<ul>
-					<li>Worked with remote support to provide solve equipment issues</li>
+					<li>Worked with remote support to diagnose and resolve equipment issues</li>
 					<li>Provided on-call support to clients</li>
 					<li>Maintained and inventoried communication systems for clients</li>
 				</ul>
@@ -395,9 +395,9 @@
 			</header>
 			<div class="col-6 col-12-medium">
 				<ul>
-					<li>Provide world class service and advice to customers</li>
-					<li>Maintain computer systems and Point Of Sale software for store operations</li>
-					<li>Coordinate with co-workers for setup of sale and promotional events</li>
+					<li>Provided world-class service and advice to customers</li>
+					<li>Maintained computer systems and Point Of Sale software for store operations</li>
+					<li>Coordinated with coworkers for setup of sales and promotional events</li>
 				</ul>
 			</div>
 			<!-- End Job 2 -->
@@ -409,9 +409,9 @@
 			</header>
 			<div class="col-6 col-12-medium">
 				<ul>
-					<li>Training and supervision of sound team</li>
-					<li>Oversee regular weekend services and other performace events</li>
-					<li>Maintain and provide support for sound equipment</li>
+					<li>Trained and supervised the sound team</li>
+					<li>Oversaw regular weekend services and other performace events</li>
+					<li>Maintained and provided support for sound equipment</li>
 				</ul>
 			</div>
 	</section>
@@ -608,7 +608,7 @@
 			<p style="border-top: none; margin-top: auto;"><span class="image left"><img src="images/pic06.jpg"
 						alt="" /></span>
 				When I was 13, I built my first computer.
-				Ever since, I have been passionate about technology and the possibilities it creates. That early
+				Since then, I've been passionate about technology and the possibilities it creates. That early
 				experience
 				of assembling components, troubleshooting issues, and finally seeing it all come to life ignited a
 				curiosity
@@ -618,14 +618,14 @@
 				These days, in addition to building computers, I enjoy tinkering with my home lab setup, constantly
 				learning
 				and expanding my knowledge. For me, technology is more than just a profession—it's a lifelong pursuit of
-				discovery, creativity, and innovation.
+				discovery, creativity, aFnd innovation.
 				</br></br></br></br>
 
 				<span class="image right"><img src="images/pic01.jpg" alt="" /></span>
-				When I'm not working, often you'll find me enjoying the great outdoors in the beautiful state of Oregon.
-				Growing up, my parents often took my brother and I on weekend trips to ski, snowshoe, hike, or ATV. I've
+				When I'm not working, you'll find me enjoying the great outdoors in the beautiful state of Oregon.
+				Growing up, my parents often took my brother and me on weekend trips to ski, snowshoe, hike, or ATV. I've
 				spent
-				countless hours exploring trails in the Oregon Cascade range, carving down ski slopes, and zipping down
+				countless hours exploring trails in the Oregon Cascades, carving down ski slopes, and zipping down
 				the
 				Oregon coastal sand dunes.</br></br>
 				Even now, I love sharing these experiences with friends and family, whether it's discovering new trails,
